# multiline

./: .gitignore  Procfile  README.md  pyproject.toml  railway.json
.github/workflows/: deploy.yml
docs/: forking-design.md  phase3-frontend.md  playtest-findings.md
src/engine/: __init__.py  ai.py  board.py  player.py  win.py
src/server/: app.py  matchmaking.py  rooms.py  schemas.py
src/web/: index.html
src/web/js/: audio.js  main.js  net.js  render.js  state.js  tutorial.js  ui.js
src/web/styles/: app.css  chrome.css  tokens.css
tests/: test_ai.py  test_matchmaking.py  test_rules.py  test_server.py  test_win.py
tests/playtest/: audio_check.py  easy_check.py  fork_value.py  ghost_check.py  harness.py  keyboard_check.py  mobile_check.py  scenarios.py  smoke.py  strategies.py  uxshots.py
