[project]
name = "multiline"
version = "0.1.0"
description = "A competitive multiverse line game inspired by 5D Chess"
requires-python = ">=3.12"
dependencies = [
	"fastapi>=0.115",
	"uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
	"pytest>=8.3",
	"httpx>=0.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false
